fix: Fix c++ and spark tests on new cases

--- a/cases/integration/v1/expression/test_arithmetic.yaml
+++ b/cases/integration/v1/expression/test_arithmetic.yaml
@@ -162,16 +162,16 @@ cases:
     expectProvider:
       0:
         rows:
-          - [NAN,10,0,7.8,5.8,0]
+          - [NAN,10,0,7.7999992370605469,5.8,0]
       1:
         rows:
-          - [NAN,10,0,7.8,5.8,0]
+          - [NAN,10,0,7.7999992370605469,5.8,0]
       2:
         rows:
-          - [0,600,900,333,363,30]
+          - [0,600,900,333.0000114440918,363,30]
       3:
         rows:
-          - [30,10,0,18.9,17.9,29]
+          - [30,10,0,18.899999618530273,17.9,29]
       4:
         columns: ["b2 double","b3 double","b4 double","b5 double","b6 double","b9 double"]
         rows:
