--- a/cases/integration/v1/expression/test_compare.yaml
+++ b/cases/integration/v1/expression/test_compare.yaml
@@ -22,15 +22,18 @@ cases:
       rows:
         - [false,false,false,false,false,false,false,false,true]
     expectProvider:
+      0:
+        rows:
+          - [false,false,false,false,false,false,false,false,false]
       1:
         rows:
-          - [false,true,false,false,false,false,false,false,true]
+          - [false,true,false,false,false,false,false,false,false]
       2:
         rows:
-          - [true,false,true,true,true,true,true,true,false]
+          - [true,false,true,true,true,true,true,true,true]
       3:
         rows:
-          - [true,true,true,true,true,true,true,true,false]
+          - [true,true,true,true,true,true,true,true,true]
       4:
         rows:
           - [true,false,true,true,true,true,true,true,true]
@@ -222,6 +225,9 @@ cases:
       rows:
         - [false,false,false,false,false,false,true,false]
     expectProvider:
+      0:
+        rows:
+          - [true,true,false,false,false,false,true,true]
       1:
         rows:
           - [true,true,false,false,false,false,true,true]
