--- a/cases/integration/v1/test_last_join.yaml
+++ b/cases/integration/v1/test_last_join.yaml
@@ -897,6 +897,7 @@ cases:
 
   - id: 28
     desc: orderby-smallint
+    tags: ["offline-unsupport", "TODO"]
     inputs:
       - columns: ["c1 string","c2 int","c3 bigint","c4 timestamp"]
         indexs: ["index1:c1:c4"]
@@ -913,6 +914,7 @@ cases:
     sql: select {0}.c1,{0}.c2,{1}.c3,{1}.c4 from {0} last join {1} ORDER BY {1}.c2 on {0}.c1={1}.c1;
     expect:
       success: false
+
   - id: 29
     desc: orderby-bool
     inputs:
@@ -955,6 +957,7 @@ cases:
         - ["bb",21,31,1590738992000]
   - id: 31
     desc: 拼接条件-bool
+    tags: ["TODO", "bug"]
     inputs:
       - columns: ["c1 string","c2 bool","c3 bigint","c4 timestamp"]
         indexs: ["index1:c2:c4"]
