--- a/cases/integration/v1/window/test_window_row_range.yaml
+++ b/cases/integration/v1/window/test_window_row_range.yaml
@@ -828,7 +828,6 @@ cases:
         - [ "aa", 7, 1590738999000, 4.0, 4.0 ]
         - [ "aa", 8, 1590739001000, 4.0, 3.0 ]
         - [ "aa", 9, 1590739002000, 4.0, 3.0 ]
-      success: false
 
   -
     id: 28
@@ -898,6 +897,7 @@ cases:
   -
     id: 31
     desc: bool为partition by
+    tags: ["TODO", "bug"]
     inputs:
       -
         columns : ["id int","c1 string","c2 bool","c3 smallint","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -940,6 +940,7 @@ cases:
   -
     id: 33
     desc: int为order by
+    tags: ["TODO"]
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -957,6 +958,7 @@ cases:
   -
     id: 34
     desc: smallint为order by
+    tags: ["TODO"]
     inputs:
       -
         columns : ["id int","c1 string","c3 smallint","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
@@ -988,6 +990,7 @@ cases:
       SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c7 ORDER BY {0}.c2 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       success: false
+
   -
     id: 36
     desc: no order by
