--- a/cases/integration/v1/test_expression.yaml
+++ b/cases/integration/v1/test_expression.yaml
@@ -610,19 +610,19 @@ cases:
       rows:
         - [NULL, NULL, NULL, NULL, NULL, NULL, NULL]
   - id: 19_7
-    tags: ["TODO", "@chenjing, @baoxinqi: encode处理常量NULL string"]
-    desc: SQL标准Cast语法-Cast(NULL as string)
+    desc: SQL标准Cast语法-Cast(Cont NULL as string)
+    tags: [ "TODO", "@chenjing, @baoxinqi: encode处理常量NULL string" ]
     inputs:
       - columns: ["c1 int", "c2 float", "c5 bigint"]
         indexs: ["index1:c1:c5"]
         rows:
           - [1, 1.0, 1590115420000]
     sql: |
-      select cast(NULL as string) as f1 from {0};
+      select c1, cast(NULL as string) as f1 from {0};
     expect:
-      columns: ["f1 string"]
+      columns: ["c1 int", "f1 string"]
       rows:
-        - [NULL]
+        - [1, NULL]
   - id: 19-8
     desc: cast函数多层子查询
     inputs:
@@ -755,16 +755,14 @@ cases:
         - [3, -1.0, -1.0, -1.0, -1.0, -1.0, NULL, 1590115420000.0, 0.0, NULL]
   - id: 20-6
     desc: cast as string
-    mode: offline-unsupport
-    tags: ["@chenjing, bool to string，spark会返回true，fesql会返回1，目前对float/double类型转string无法保证离线在线一致性"]
     inputs:
       - columns: ["id int32", "c1 int16", "c2 int32", "c3 int64", "c4 float", "c5 double", 
       "c6 string", "c7 date", "c8 timestamp", "c9 bool", "c10 string"]
         indexs: ["index1:c6:c8"]
         rows:
-          - [1, 1, 1, 1, 1.0, 1.0, "2020-05-22 10:43:40", "2020-05-22", 1590115420000, true, "1"]
-          - [2, -1, -1, -1, -1.0, -1.0, "2020-05-22 10:43:40", "2020-05-22", 1590115420000, false, "-1"]
-          - [3, -1, -1, -1, -1.0, -1.0, NULL, "2020-05-22", 1590115420000, false, ""]
+          - [1, 1, 1, 1, 1.1, 1.1, "2020-05-22 10:43:40", "2020-05-22", 1590115420000, true, "1"]
+          - [2, -1, -1, -1, -1.1, -1.1, "2020-05-22 10:43:40", "2020-05-22", 1590115420000, false, "-1"]
+          - [3, -1, -1, -1, -1.1, -1.1, NULL, "2020-05-22", 1590115420000, false, ""]
     sql: |
       select id,
       string(c1) as string_c1, string(c2) as string_c2, string(c3) as string_c3, string(c4) as string_c4, 
@@ -776,9 +774,9 @@ cases:
       columns: ["id int32", "string_c1 string", "string_c2 string", "string_c3 string", "string_c4 string", "string_c5 string", 
                 "string_c6 string", "string_c7 string", "string_c8 string", "string_c9 string", "string_c10 string"]
       rows:
-        - [1, "1", "1", "1", "1", "1", "2020-05-22 10:43:40", "2020-05-22", "2020-05-22 10:43:40", "1", "1"]
-        - [2, "-1", "-1", "-1", "-1", "-1", "2020-05-22 10:43:40", "2020-05-22", "2020-05-22 10:43:40", "0", "-1"]
-        - [3, "-1", "-1", "-1", "-1", "-1", NULL, "2020-05-22", "2020-05-22 10:43:40", "0", ""]
+        - [1, "1", "1", "1", "1.1", "1.1", "2020-05-22 10:43:40", "2020-05-22", "2020-05-22 10:43:40", "true", "1"]
+        - [2, "-1", "-1", "-1", "-1.1", "-1.1", "2020-05-22 10:43:40", "2020-05-22", "2020-05-22 10:43:40", "false", "-1"]
+        - [3, "-1", "-1", "-1", "-1.1", "-1.1", NULL, "2020-05-22", "2020-05-22 10:43:40", "false", ""]
   - id: 20-7
     desc: cast as date
     tags: ["Spark只能支持2020-05-22格式，FESQL在线可以同时支持2020-05-22 10:43:40和2020-05-22格式"]
@@ -886,19 +884,18 @@ cases:
         - [12, NULL]
   - id: 20-10
     desc: cast float as string
-    tags: ["TODO", "@chenjing c++ and java cast rules"]
     inputs:
       - columns: ["id int64", "c2 int32", "c6 float"]
         indexs: ["index1:c2:id"]
         rows:
-          - [1, 1, 1.0]
+          - [1, 1, 1.1]
     sql: |
       select id, string(c6) as string_c6 from {0};
     expect:
       order: id
       columns: ["id int64", "string_c6 string"]
       rows:
-        - [1, "1.0"]
+        - [1, "1.1"]
   - id: 21-1
     desc: column name prefix with _
     inputs:
