test: fix delete

--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -32,5 +32,6 @@ QUERY_THREAD_NUM=1
 NEED_CREATE=false
 PK_NUM=50
 #request:batch_request
-REQUEST_RATIO=1.0
+REQUEST_RATIO=0.5
 PROCEDURE_RATIO=0.5
+RUNTIME=100000000000
