--- a/cases/integration/v1/window/test_window_row_range.yaml
+++ b/cases/integration/v1/window/test_window_row_range.yaml
@@ -172,23 +172,6 @@ cases:
         - [4,"dd",30,3]
         - [5,"ee",31,1]
   -
-    id: 7
-    desc: string为order by
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,30,1.1,2.1,1590738991000,"2020-05-01"]
-          - [3,"cc",20,30,1.1,2.1,1590738992000,"2020-05-01"]
-          - [4,"dd",20,30,1.1,2.1,1590738993000,"2020-05-01"]
-          - [5,"ee",21,31,1.2,2.2,1590738994000,"2020-05-02"]
-    sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c1 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
-    expect:
-      success: false
-  -
     id: 8
     desc: bigint为order by-不加单位-bigint
     inputs:
@@ -286,59 +269,6 @@ cases:
         - [3,"cc",32,3]
         - [4,"dd",33,4]
         - [5,"ee",34,1]
-  -
-    id: 9
-    desc: float为order by
-    mode: rtidb-unsupport
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c8:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,31,1.2,2.1,1590738990000,"2020-05-01"]
-          - [3,"cc",20,32,1.3,2.1,1590738990000,"2020-05-01"]
-          - [4,"dd",20,33,1.4,2.1,1590738990000,"2020-05-01"]
-          - [5,"ee",21,34,1.5,2.2,1590738991000,"2020-05-02"]
-    sql: |
-      SELECT id, c1, c5, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c8 ORDER BY {0}.c5 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
-    expect:
-      success: false
-  -
-    id: 10
-    desc: double为order by
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,31,1.2,2.2,1590738990000,"2020-05-01"]
-          - [3,"cc",20,32,1.3,2.3,1590738990000,"2020-05-01"]
-          - [4,"dd",20,33,1.4,2.4,1590738990000,"2020-05-01"]
-          - [5,"ee",21,34,1.5,2.5,1590738991000,"2020-05-02"]
-    sql: |
-      SELECT id, c1, c6, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c8 ORDER BY {0}.c6 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
-    expect:
-      success: false
-  -
-    id: 11
-    desc: date为order by-未命中索引
-    mode: offline-unsupport
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,31,1.2,2.2,1590738990000,"2020-05-02"]
-          - [3,"cc",20,32,1.3,2.3,1590738990000,"2020-05-03"]
-          - [4,"dd",20,33,1.4,2.4,1590738990000,"2020-05-04"]
-          - [5,"ee",21,34,1.5,2.5,1590738991000,"2020-05-05"]
-    sql: |
-      SELECT id, c1, c8, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c8 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
-    expect:
-      success: false
   -
     id: 12
     desc: 多个pk
@@ -597,57 +527,6 @@ cases:
         - [4,"dd",20,96]
         - [5,"ee",21,34]
   -
-    id: 23
-    desc: window名不存在
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,31,1.2,2.2,1590738991000,"2020-05-02"]
-          - [3,"cc",20,32,1.3,2.3,1590738992000,"2020-05-03"]
-          - [4,"dd",20,33,1.4,2.4,1590738993000,"2020-05-04"]
-          - [5,"ee",21,34,1.5,2.5,1590738994000,"2020-05-05"]
-    sql: |
-      SELECT id, c1, c3, sum(c4) OVER w2 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c3 ORDER BY {0}.c7 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
-    expect:
-      success: false
-  -
-    id: 24
-    desc: window使用的表名不存在
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,31,1.2,2.2,1590738991000,"2020-05-02"]
-          - [3,"cc",20,32,1.3,2.3,1590738992000,"2020-05-03"]
-          - [4,"dd",20,33,1.4,2.4,1590738993000,"2020-05-04"]
-          - [5,"ee",21,34,1.5,2.5,1590738994000,"2020-05-05"]
-    sql: |
-      SELECT id, c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}1.c3 ORDER BY {0}1.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
-    expect:
-      success: false
-  -
-    id: 25
-    desc: window使用的列名不存在
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,31,1.2,2.2,1590738991000,"2020-05-02"]
-          - [3,"cc",20,32,1.3,2.3,1590738992000,"2020-05-03"]
-          - [4,"dd",20,33,1.4,2.4,1590738993000,"2020-05-04"]
-          - [5,"ee",21,34,1.5,2.5,1590738994000,"2020-05-05"]
-    sql: |
-      SELECT id, c1, c3, sum(c4) OVER w1 as w1_c4_sum FROM {0} WINDOW w1 AS (PARTITION BY {0}.c33 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
-    expect:
-      success: false
-  -
     id: 28
     desc: 匿名窗口
     inputs:
@@ -755,23 +634,6 @@ cases:
     expect:
       success: false
   -
-    id: 33
-    desc: int为order by
-    inputs:
-      -
-        columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
-        indexs: ["index1:c1:c7"]
-        rows:
-          - [1,"aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [2,"bb",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [3,"cc",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [4,"dd",20,30,1.1,2.1,1590738990000,"2020-05-01"]
-          - [5,"ee",21,31,1.2,2.2,1590738991000,"2020-05-02"]
-    sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c7 ORDER BY {0}.c3 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
-    expect:
-      success: false
-  -
     id: 34
     desc: smallint为order by
     inputs:
@@ -785,7 +647,7 @@ cases:
           - [4,"dd",20,30,1.1,2.1,1590738990000,"2020-05-01"]
           - [5,"ee",21,31,1.2,2.2,1590738991000,"2020-05-02"]
     sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c7 ORDER BY {0}.c3 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c3 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       success: false
   -
@@ -802,7 +664,7 @@ cases:
           - [4,"dd",true,20,30,1.1,2.1,1590738990000,"2020-05-01"]
           - [5,"ee",false,21,31,1.2,2.2,1590738991000,"2020-05-02"]
     sql: |
-      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c7 ORDER BY {0}.c2 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
+      SELECT id, c1, c4, count(c4) OVER w1 as w1_c4_count FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c2 ROWS BETWEEN 2 PRECEDING AND CURRENT ROW);
     expect:
       success: false
   -
@@ -1146,3 +1008,31 @@ cases:
         - ["aa",22,61]
         - ["aa",23,93]
         - ["bb",24,0]
+  -
+    id: 51
+    desc: 重复的聚合表达式
+    tags: ["TODO","bug,重复的聚合表达式计算结果不一致"]
+    inputs:
+      -
+        columns : ["c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date"]
+        indexs: ["index1:c1:c7"]
+        rows:
+          - ["aa",20,30,1.1,2.1,1590738990000,"2020-05-01"]
+          - ["aa",21,31,1.2,2.2,1590738991000,"2020-05-02"]
+          - ["aa",22,32,1.3,2.3,1590738992000,"2020-05-03"]
+          - ["aa",23,33,1.4,2.4,1590738993000,"2020-05-04"]
+          - ["bb",24,34,1.5,2.5,1590738994000,"2020-05-05"]
+    sql: |
+      SELECT c1, c3,
+      sum(c4) OVER w1 as w1_c4_sum,
+      sum(c4) OVER w1 as w1_c4_sum2
+      FROM {0} WINDOW w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 2s PRECEDING AND CURRENT ROW);
+    expect:
+      order: c3
+      columns: ["c1 string","c3 int","w1_c4_sum bigint", "w1_c4_sum2 bigint"]
+      rows:
+        - ["aa",20,30, 30]
+        - ["aa",21,61, 61]
+        - ["aa",22,93, 93]
+        - ["aa",23,96, 96]
+        - ["bb",24,34, 34]
