--- a/cases/integration/v1/test_window_row_range.yaml
+++ b/cases/integration/v1/test_window_row_range.yaml
@@ -872,3 +872,52 @@ cases:
         - [ "aa", 7, 1590738999000, 7.0, 4.0 ]
         - [ "aa", 8, 1590739001000, 8.0, 3.0 ]
         - [ "aa", 9, 1590739002000, 8.0, 3.0 ]
+
+  - id: 29
+    desc: ROWS and ROWS_RANGE Pure History Window Cant' Be Merge
+    mode: rtidb-batch-unsupport
+    inputs:
+      - columns: [ "c1 string","c3 int","c4 double","c7 timestamp" ]
+        indexs: [ "index1:c1:c7" ]
+        rows:
+          - [ "aa",1, 1.0, 1590738990000 ]
+          - [ "aa",2, 1.0, 1590738991000 ]
+          - [ "aa",3, 1.0, 1590738992000 ]
+          - [ "aa",4, 1.0, 1590738993000 ]
+          - [ "aa",5, 1.0, 1590738994000 ]
+          - [ "aa",6, 1.0, 1590738995000 ]
+          - [ "aa",7, 1.0, 1590738999000 ]
+          - [ "aa",8, 1.0, 1590739001000 ]
+          - [ "aa",9, 1.0, 1590739002000 ]
+    sql: |
+      SELECT c1, c3, c7,
+      sum(c4) OVER w1 as w1_c4_sum,
+      sum(c4) OVER w2 as w2_c4_sum
+      FROM {0} WINDOW
+      w1 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS BETWEEN 3 PRECEDING AND CURRENT ROW),
+      w2 AS (PARTITION BY {0}.c1 ORDER BY {0}.c7 ROWS_RANGE BETWEEN 6s PRECEDING AND 2s PRECEDING);
+    request_plan: |
+      SIMPLE_PROJECT(sources=(c1, c3, c7, w1_c4_sum, w2_c4_sum))
+        REQUEST_JOIN(type=kJoinTypeConcat)
+          PROJECT(type=Aggregation)
+            REQUEST_UNION(partition_keys=(), orders=() ASC, rows=(auto_t0.c7, -3, 0), index_keys=(auto_t0.c1))
+              DATA_PROVIDER(request=auto_t0)
+              DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
+          PROJECT(type=Aggregation)
+            REQUEST_UNION(partition_keys=(), orders=() ASC, range=(auto_t0.c7, -6000, -2000), index_keys=(auto_t0.c1))
+              DATA_PROVIDER(request=auto_t0)
+              DATA_PROVIDER(type=Partition, table=auto_t0, index=index1)
+
+    expect:
+      order: c3
+      columns: [ "c1 string", "c3 int", "c7 timestamp",  "w1_c4_sum double", "w2_c4_sum double" ]
+      rows:
+        - [ "aa", 1, 1590738990000, 1.0, 0.0 ]
+        - [ "aa", 2, 1590738991000, 2.0, 0.0 ]
+        - [ "aa", 3, 1590738992000, 3.0, 1.0 ]
+        - [ "aa", 4, 1590738993000, 4.0, 2.0 ]
+        - [ "aa", 5, 1590738994000, 4.0, 3.0 ]
+        - [ "aa", 6, 1590738995000, 4.0, 4.0 ]
+        - [ "aa", 7, 1590738999000, 4.0, 3.0 ]
+        - [ "aa", 8, 1590739001000, 4.0, 2.0 ]
+        - [ "aa", 9, 1590739002000, 4.0, 1.0 ]
