--- a/src/sdk/python/fesql-auto-test-python/fesql.conf
+++ b/src/sdk/python/fesql-auto-test-python/fesql.conf
@@ -11,6 +11,12 @@ qa_tb_endpoint_0=172.27.128.37:19547
 qa_tb_endpoint_1=172.27.128.37:19548
 qa_tb_endpoint_2=172.27.128.37:19549
 
+cj_zk_cluster=127.0.0.1:6181
+cj_zk_root_path=/onebox
+cj_tb_endpoint_0=127.0.0.1:9520
+cj_tb_endpoint_1=127.0.0.1:9521
+cj_tb_endpoint_2=127.0.0.1:9522
+
+
 cicd_zk_cluster=127.0.0.1:6181
 cicd_zk_root_path=/onebox
-
