--- a/cases/plan/window_query.yaml
+++ b/cases/plan/window_query.yaml
@@ -196,47 +196,47 @@ cases:
       w2 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW MAXSIZE 20) limit 10;
 
   - id: 25-1
-    desc: window ROWS_RANGE, -1000ms 至当前时刻 OPEN_INTERVAL_WINDOW
+    desc: window ROWS_RANGE, -1000ms 至当前时刻 EXCLUDE CURRENT_TIME
     sql: |
       SELECT sum(col2) OVER w1 as w1_col2_sum FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1000 PRECEDING AND CURRENT ROW OPEN_INTERVAL_WINDOW) limit 10;
+      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1000 OPEN PRECEDING AND CURRENT ROW EXCLUDE CURRENT_TIME) limit 10;
   - id: 25-2
-    desc: window ROWS, 前1000条到当前条 OPEN_INTERVAL_WINDOW
+    desc: window ROWS, 前1000条到当前条 EXCLUDE CURRENT_TIME
     sql: |
       SELECT sum(col2) OVER w1 as w1_col2_sum FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 1000 PRECEDING AND CURRENT ROW OPEN_INTERVAL_WINDOW) limit 10;
+      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 1000 OPEN PRECEDING AND CURRENT ROW EXCLUDE CURRENT_TIME) limit 10;
   - id: 25-3
-    desc: window ROWS_RANGE, -1000ms 到当前条 OPEN_INTERVAL_WINDOW
+    desc: window ROWS_RANGE, -1000ms 到当前条 EXCLUDE CURRENT_TIME
     sql: |
       SELECT sum(col2) OVER w1 as w1_col2_sum FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1000 PRECEDING AND CURRENT ROW OPEN_INTERVAL_WINDOW) limit 10;
+      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1000 OPEN PRECEDING AND CURRENT ROW EXCLUDE CURRENT_TIME) limit 10;
   - id: 25-4
-    desc: window RANGE, -1s至当前时刻 OPEN_INTERVAL_WINDOW
+    desc: window RANGE, -1s至当前时刻 EXCLUDE CURRENT_TIME
     sql: |
       SELECT sum(col2) OVER w1 as w1_col2_sum FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1s PRECEDING AND CURRENT ROW OPEN_INTERVAL_WINDOW) limit 10;
+      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1s OPEN PRECEDING AND CURRENT ROW EXCLUDE CURRENT_TIME) limit 10;
   - id: 25-5
-    desc: window ROWS, ROWS_RANGE OPEN_INTERVAL_WINDOW
+    desc: window ROWS, ROWS_RANGE EXCLUDE CURRENT_TIME
     sql: |
       SELECT
-      sum(col1) OVER (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 2d PRECEDING AND CURRENT ROW OPEN_INTERVAL_WINDOW) as w_col1_sum,
+      sum(col1) OVER (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 2d PRECEDING AND CURRENT ROW EXCLUDE CURRENT_TIME) as w_col1_sum,
       sum(col2) OVER w1 as w1_col2_sum,
-      sum(col3) OVER (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 1000 PRECEDING AND CURRENT ROW OPEN_INTERVAL_WINDOW) as w_col3_sum
+      sum(col3) OVER (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 1000 PRECEDING AND CURRENT ROW EXCLUDE CURRENT_TIME) as w_col3_sum
       FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW OPEN_INTERVAL_WINDOW) limit 10;
+      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW EXCLUDE CURRENT_TIME) limit 10;
   - id: 25-6
-    desc: window ROWS_RANGE with MAXSIZE OPEN_INTERVAL_WINDOW
+    desc: window ROWS_RANGE with MAXSIZE EXCLUDE CURRENT_TIME
     sql: |
       SELECT
       sum(col2) OVER w1 as w1_col2_sum
       FROM t1
-      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW MAXSIZE 5 OPEN_INTERVAL_WINDOW) limit 10;
+      WINDOW w1 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d OPEN PRECEDING AND CURRENT ROW MAXSIZE 5 EXCLUDE CURRENT_TIME) limit 10;
   - id: 25-7
-    desc: window ROWS and ROWS_RANGE with MAXSIZE OPEN_INTERVAL_WINDOW
+    desc: window ROWS and ROWS_RANGE with MAXSIZE EXCLUDE CURRENT_TIME
     sql: |
       SELECT
       sum(col2) OVER w1 as w1_col2_sum,
       sum(col2) OVER w2 as w1_col2_sum
       FROM t1 WINDOW
-      w1 AS (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 10 PRECEDING AND CURRENT ROW OPEN_INTERVAL_WINDOW),
-      w2 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d PRECEDING AND CURRENT ROW MAXSIZE 20 OPEN_INTERVAL_WINDOW) limit 10;
+      w1 AS (PARTITION BY col1 ORDER BY col5 ROWS BETWEEN 10 OPEN PRECEDING AND CURRENT ROW EXCLUDE CURRENT_TIME),
+      w2 AS (PARTITION BY col1 ORDER BY col5 ROWS_RANGE BETWEEN 1d OPEN PRECEDING AND CURRENT ROW MAXSIZE 20 EXCLUDE CURRENT_TIME) limit 10;
