--- a/cases/integration/v1/expression/test_compare.yaml
+++ b/cases/integration/v1/expression/test_compare.yaml
@@ -92,6 +92,7 @@ cases:
           - [false,true,false,false,false,false,false]
   - id: 2
     desc: "整型_比较运算_各种类型_错误"
+    level: 5
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
@@ -165,6 +166,7 @@ cases:
           - [true,true,false,true]
   - id: 4
     desc: "timestamp_比较运算_各种类型_错误"
+    level: 5
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
@@ -185,6 +187,7 @@ cases:
       success: false
   - id: 5
     desc: "date_比较运算_各种类型_错误"
+    level: 5
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
