--- a/cases/integration/v1/function/test_calculate.yaml
+++ b/cases/integration/v1/function/test_calculate.yaml
@@ -154,6 +154,7 @@ cases:
         - [2, NULL, NULL, NULL, NULL,NULL]
   - id: 7
     desc: "计算函数-单参数-fail"
+    level: 5
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
@@ -168,6 +169,7 @@ cases:
       success: false
   - id: 8
     desc: "计算函数-单参数-bool-fail"
+    level: 5
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
@@ -182,6 +184,7 @@ cases:
       success: false
   - id: 9
     desc: "计算函数-两参数-fail"
+    level: 5
     inputs:
       -
         columns : ["id bigint","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 bool"]
