--- a/cases/integration/v1/function/test_udaf_function.yaml
+++ b/cases/integration/v1/function/test_udaf_function.yaml
@@ -142,6 +142,7 @@ cases:
   -
     id: 6
     desc: max/max/count/sum/avg/distinct_count-bool
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
@@ -184,6 +185,7 @@ cases:
   -
     id: 8
     desc: avg-timestamp
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
@@ -200,6 +202,7 @@ cases:
   -
     id: 9
     desc: sum-date
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
@@ -216,6 +219,7 @@ cases:
   -
     id: 10
     desc: sum-string
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
@@ -232,6 +236,7 @@ cases:
   -
     id: 11
     desc: avg-date
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
@@ -248,6 +253,7 @@ cases:
   -
     id: 12
     desc: avg-string
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string"]
@@ -379,6 +385,7 @@ cases:
   -
     id: 18
     desc: AVG_WHERE/MAX_WHERE/MIN_WHERE/SUM_WHERE-fail
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
@@ -399,6 +406,7 @@ cases:
   -
     id: 19
     desc: COUNT_WHERE-fail
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
@@ -779,6 +787,7 @@ cases:
   -
     id: 25
     desc: "*_cate-fail1"
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
@@ -810,6 +819,7 @@ cases:
   -
     id: 26
     desc: "*_cate-fail2"
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
@@ -1196,6 +1206,7 @@ cases:
   -
     id: 32
     desc: "*_cate_where-fail1"
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
@@ -1227,6 +1238,7 @@ cases:
   -
     id: 33
     desc: "*_cate_where-fail2"
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
@@ -1613,6 +1625,7 @@ cases:
   -
     id: 39
     desc: "top_n_key_*_cate_where-fail1"
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
@@ -1644,6 +1657,7 @@ cases:
   -
     id: 40
     desc: "top_n_key_*_cate_where-fail2"
+    level: 5
     inputs:
       -
         columns : ["id int","c1 string","c2 smallint","c3 int","c4 bigint","c5 float","c6 double","c7 timestamp","c8 date","c9 string","c10 bool"]
