fix: rm redundant modify

--- a/src/sdk/java/sql-jmh/src/main/resources/conf.properties
+++ b/src/sdk/java/sql-jmh/src/main/resources/conf.properties
@@ -1,10 +1,10 @@
 
-ZK_CLUSTER=172.27.128.37:7181
+ZK_CLUSTER=172.27.128.32:12200
 #ZK_CLUSTER=127.0.0.1:6181
 #ZK_PATH=/standalone
 #ZK_PATH=/cluster
 #ZK_PATH=/rtidb_fe
-ZK_PATH=/rtidb_wb
+ZK_PATH=/stable_test
 ZK_NS=featuredb
 PARTITION_NUM=4
 MODE=request
@@ -27,10 +27,10 @@ commonCol=uUserId,zChannel,uSex,zUserId,uPlayGame,uHasJoinedGroup,eventTime,uWat
 
 #only for stability
 METHOD=insert,query
-PUT_THREAD_NUM=3
-QUERY_THREAD_NUM=3
-NEED_CREATE=true
-PK_NUM=5000
+PUT_THREAD_NUM=1
+QUERY_THREAD_NUM=1
+NEED_CREATE=false
+PK_NUM=50
 #request:batch_request
-REQUEST_RATIO=0.5
+REQUEST_RATIO=1.0
 PROCEDURE_RATIO=0.5
